aidlc(code-generation): ux-bugfixes 12건 구현 (FR-1~FR-12)
